--- a/src/index.css
+++ b/src/index.css
@@ -4,40 +4,44 @@
     font-weight: 400;
 }
 
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
-
 body {
     min-width: 320px;
     min-height: 100vh;
 }
 
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
+.list-container {
+    display: flex;
+    width: 100%;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow: auto;
+    padding: 2rem;
 }
 
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
+div[data-item-type="list"] {
+    transform: none;
+    width: 250px;
+    min-width: 250px;
+    height: 300px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    overflow: auto;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 5px;
+    border-top-color: gray;
+    border-bottom-color: gray;
+    border-left-color: gray;
+    border-right-color: gray;
 }
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+
+div[data-item-type="card"] {
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #f0f0f0;
+    text-align: center;
+    cursor: grab;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 5px;
 }
